--- a/resources/views/partials/navber.edge
+++ b/resources/views/partials/navber.edge
@@ -4,7 +4,7 @@
         <a class="nav-link" href="#">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Add Post</a>
+        <a class="nav-link" href="/posts">Add Post</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">About</a>
